# seeksoultools

./: LICENSE  MANIFEST.in  README.md  conda_dependencies.yml  setup.cfg
src/seeksoultools/: __init__.py
src/seeksoultools/rna/: __init__.py  cell_identify.R  do_seurat.R  force.cell_identify.R  report.py  step2.py  step3.py  step4.py
src/seeksoultools/rna/template/: base.html  cells_part.html  cluster_part.html  mapping_part.html  marker_part.html  median_part.html  ori.sequencing_part.html  sample_part.html  saturation_part.html  sequencing_part.html  summary_part.html  umi_part.html
src/seeksoultools/rna/template/js/: plotly-latest.min.js
src/seeksoultools/utils/: __init__.py  addtag.py  barcode.py  chemistry.py  helper.py  mkref.py  pipeline.py  wrappers.py
src/seeksoultools/utils/barcode/SO01V3/: Linker1.txt  Linker2.txt  seekgene.txt
