[metadata]
name = seeksoultools
version = 1.0.0
author = seekgenebio
author_email = tools@seekgene.com
url = https://github.com/seekgenebio/seeksoultools
description = seeksoultools is a tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = Linux

[options]
packages = find:
package_dir = 
  = src

include_package_data=True

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    seeksoultools = seeksoultools:cli
